# AutoAudit

./: README.md  docker-compose.dev.yml
backend-api/: .env.example  README.md  alembic.ini  pyproject.toml
backend-api/alembic/: README  env.py
backend-api/alembic/versions/: a0ffaa05246a_create_users_table.py
backend-api/app/api/v1/: auth.py  router.py  test.py
backend-api/app/core/: auth.py  config.py  permissions.py  users.py
backend-api/app/db/: __init__.py  base.py  init_db.py  session.py
backend-api/app/models/: user.py
backend-api/app/schemas/: user.py
